Fixed the overflow in channel title in youtubeM

--- a/styles/youtubeM.css
+++ b/styles/youtubeM.css
@@ -156,6 +156,12 @@ p {
     margin-right: 1ch;
 
     font-size: 0.9rem;
+
+    max-width: 20ch;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    vertical-align: middle;
 }
 
 .videoplay-subscribers {
